--- a/Section 2 (Python Text Basics).ipynb
+++ b/Section 2 (Python Text Basics).ipynb
@@ -221,57 +221,253 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f427afea",
+   "cell_type": "markdown",
+   "id": "71cdc2af",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Working with Text Files with Python - Part Two"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "53f3ce0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This method only applicable in Jupyter Notebook\n",
+    "# This method creates a txt file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "5fe88fc5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting Test.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile Test.txt\n",
+    "Hello, this is a quick test file.\n",
+    "Here is the second line. Adding a word!!"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "87ae05f5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Azarm'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "04a0a44e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# This command only opens the file, does not print it\n",
+    "myfile = open('test.txt')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "bf93fd70",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='test.txt' mode='r' encoding='cp1252'>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfile"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a0f38eec",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello, this is a quick test file.\\nHere is the second line. Adding a word!!\\n'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfile.read()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "5f9897a6",
+   "metadata": {},
+   "source": [
+    "First time you run myfile.read() the curser is at the begining of the file and it read the whole text file. If you run the same code, it will not show anything to you because the curser will be at the end of the file. \n",
+    "\n",
+    "How to reset the courser? myfile.seek(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "98ecf7b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfile.seek(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "79c00672",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, this is a quick test file.\n",
+      "Here is the second line. Adding a word!!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(myfile.read())"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "ab74c533",
+   "metadata": {},
+   "source": [
+    "You should always close the file when you done."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "406353e9",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "myfile.close()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "cfcea2de",
+   "metadata": {},
+   "source": [
+    "myfile = open('')\n",
+    "myfile.read()\n",
+    "myfile.seek(0)\n",
+    "myfile.close()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "444afe8f",
+   "metadata": {},
+   "source": [
+    "Now, how to iterate through each line with a read() method \n",
+    "Instead of read(), you can use myfile.readlines() method which is going to treat each line of the file as an item in a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "04dc4be3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myfile = open('Test.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c5bbb72f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hello, this is a quick test file.\\n',\n",
+       " 'Here is the second line. Adding a word!!\\n']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfile.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a0ef64bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylines = myfile.readlines()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf02737e",
+   "id": "dac77371",
    "metadata": {},
    "outputs": [],
    "source": []
